# quick_cmd

./: README.md  pyproject.toml
src/quick_cmd/: __init__.py  __main__.py  cli.py
src/quick_cmd/commands/: __init__.py  example.py  test.py
